--- a/so/index.html
+++ b/so/index.html
@@ -10,18 +10,17 @@
 </head>
 
 <body>
-    <h1>Galéria de Fotos</h1>
+    <h1>Galeria de Fotos</h1>
     <div class="gallery">
-        <img src="/so/img/background.jpeg" alt="Música">
-        <img src="/so/img/logo-ads.jpg" alt="a small street between building">
+        <img src="https://picsum.photos/id/237/200/300" alt="Cachorro">
+        <img src="https://picsum.photos/id/1022/200/300" alt="pc">
         <img src="https://picsum.photos/id/1067/500/500" alt="seen from the sky of a big city">
         <img src="https://picsum.photos/id/122/500/500" alt="a bridge in the night">
-        <img src="/so/img/vox.jpeg" alt="VOX">
       </div>
 </body>
 
     <footer>
-    <p>Caso queira sua foto aqui, envie uma mensagem: 
+    <p>Gostou? Nos escreva! 
        <input type="text" name="text" id="text">
        <button>Enviar</button>
     </p>
