--- a/so/index.html
+++ b/so/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galeria de Imagens</title>
+    <title>Galeria</title>
       <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Galeria de Fotos</h1>
+    <h1>Galeria</h1>
     <div class="gallery">
         <img src="https://picsum.photos/id/237/200/300" alt="Cachorro">
         <img src="https://picsum.photos/id/1022/200/300" alt="pc">
