--- a/gallery/index.html
+++ b/gallery/index.html
@@ -13,9 +13,9 @@
     <h1>Galeria</h1>
     <div class="gallery">
         <img src="https://picsum.photos/id/237/200/300" alt="Cachorro">
-        <img src="https://picsum.photos/id/1022/200/300" alt="pc">
-        <img src="https://picsum.photos/id/1067/500/500" alt="seen from the sky of a big city">
-        <img src="https://picsum.photos/id/122/500/500" alt="a bridge in the night">
+        <img src="https://picsum.photos/id/1022/200/300" alt="Aurora Boreal">
+        <img src="https://picsum.photos/id/1067/500/500" alt="Vista do céu da grande cidade">
+        <img src="https://picsum.photos/id/122/500/500" alt="Uma ponte na noite">
       </div>
 </body>
 
